# floem-shadcn

./: .gitignore  Cargo.toml
examples/: combobox_test.rs  showcase.rs
src/: lib.rs  styled.rs  theme.rs
src/components/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  calendar.rs  card.rs  carousel.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  date_picker.rs  dialog.rs  drawer.rs  dropdown_menu.rs  hover_card.rs  input.rs  input_otp.rs  label.rs  menubar.rs  mod.rs  navigation_menu.rs  pagination.rs  popover.rs  progress.rs  radio_group.rs  resizable.rs  scroll_area.rs  select.rs  separator.rs  sheet.rs  sidebar.rs  skeleton.rs  slider.rs  switch.rs  (+7 more)
src/text/: document.rs  keymap.rs  mod.rs  style_utils.rs  text_area.rs  text_input.rs  text_layout_lines.rs
tests/: button.rs  dialog.rs  select.rs  sidebar_style_cache.rs  slider.rs  tabs.rs
